<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.menu.MenuActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewMenu"/>

    <TextView
        style="@style/TextInformation"
        android:id="@+id/textViewMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:layout_constraintBottom_toTopOf="@+id/buttonStudy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="@string/menuActivityWelcome"
        />

    <Button
        style="@style/TextInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStudy"
        android:text="@string/buttonStudy"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shadow_button_layer_list"/>


    <Button
        style="@style/TextInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonQuiz"
        android:text="@string/buttonQuiz"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonStudy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shadow_button_layer_list"/>

    <Button
        style="@style/TextInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonQuizTeacher"
        android:text="@string/buttonQuizTeacher"
        android:layout_marginTop="50dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonQuiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shadow_button_layer_list"/>




</androidx.constraintlayout.widget.ConstraintLayout>