<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.study.StudyActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textViewMenu"/>

    <TextView
        style="@style/TextInformation"
        android:id="@+id/textViewStudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appBar"
        app:layout_constraintBottom_toTopOf="@+id/buttonStudy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="@string/welcomeStudy"
        />

    <Button
        style="@style/TextInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonVowels"
        android:text="@string/vowels"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewStudy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shadow_button_layer_list"
        android:padding="10dp"/>

    <Button
        style="@style/TextInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonConsonants"
        android:text="@string/consonants"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonVowels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shadow_button_layer_list"
        android:padding="10dp"/>

    <Button
        style="@style/TextInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAll"
        android:text="@string/allLetters"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonConsonants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shadow_button_layer_list"
        android:padding="10dp"/>






</androidx.constraintlayout.widget.ConstraintLayout>